==> Firmament-Autopilot/FMT-Firmware/target/pixhawk/fmu-v6c/drivers/drv_usart.c <==
#include <firmament.h>
#include "drv_usart.h"
#include "hal/serial/serial.h"
#include "stm32h7xx_ll_usart.h"
    #include "core_cm7.h"
#define UART_ENABLE_IRQ(n)  NVIC_EnableIRQ((n))
#define UART_DISABLE_IRQ(n) NVIC_DisableIRQ((n))
#define UART_DMA_CACHE_ALIGNMENT __SCB_DCACHE_LINE_SIZE
#define UART_DMA_CACHE_ALIGNMENT 32U
#define USING_UART1
#define USING_UART2
#define USING_UART3
#define USING_UART5
#define USING_UART6
#define USING_UART7
#define USING_UART8
#define SERIAL3_DEFAULT_CONFIG                    \
    {                                             \
        BAUD_RATE_9600,      /* 9600 bits/s */    \
            DATA_BITS_8,     /* 8 databits */     \
            STOP_BITS_1,     /* 1 stopbit */      \
            PARITY_NONE,     /* No parity  */     \
            BIT_ORDER_LSB,   /* LSB first sent */ \
            NRZ_NORMAL,      /* Normal mode */    \
            SERIAL_RB_BUFSZ, /* Buffer size */    \
            0                                     \
    }
#define SERIAL5_DEFAULT_CONFIG                  \
    {                                           \
        BAUD_RATE_230400,  /* 115200 bits/s */  \
            DATA_BITS_8,   /* 8 databits */     \
            STOP_BITS_1,   /* 1 stopbit */      \
            PARITY_NONE,   /* No parity  */     \
            BIT_ORDER_LSB, /* LSB first sent */ \
            NRZ_NORMAL,    /* Normal mode */    \
            1024,          /* Buffer size */    \
            0                                   \
    }

static void _dma_rx_config(struct stm32_uart* uart, rt_size_t size)
{
    (void)size;

    /* set expected receive length */
    uart->dma.setting_recv_len = uart->dma.rx_buffer_size;
    uart->dma.last_recv_index = 0;

    LL_DMA_DeInit(uart->dma.dma_device, uart->dma.rx_stream);
    LL_DMA_SetPeriphRequest(uart->dma.dma_device, uart->dma.rx_stream, uart->dma.rx_request);
    LL_DMA_SetDataTransferDirection(uart->dma.dma_device, uart->dma.rx_stream, LL_DMA_DIRECTION_PERIPH_TO_MEMORY);
    LL_DMA_SetStreamPriorityLevel(uart->dma.dma_device, uart->dma.rx_stream, LL_DMA_PRIORITY_HIGH);
    LL_DMA_SetMode(uart->dma.dma_device, uart->dma.rx_stream, LL_DMA_MODE_CIRCULAR);
    LL_DMA_SetPeriphIncMode(uart->dma.dma_device, uart->dma.rx_stream, LL_DMA_PERIPH_NOINCREMENT);
    LL_DMA_SetMemoryIncMode(uart->dma.dma_device, uart->dma.rx_stream, LL_DMA_MEMORY_INCREMENT);
    LL_DMA_SetPeriphSize(uart->dma.dma_device, uart->dma.rx_stream, LL_DMA_PDATAALIGN_BYTE);
    LL_DMA_SetMemorySize(uart->dma.dma_device, uart->dma.rx_stream, LL_DMA_MDATAALIGN_BYTE);
    LL_DMA_DisableFifoMode(uart->dma.dma_device, uart->dma.rx_stream);
    LL_USART_SetRXFIFOThreshold(uart->uart_device, LL_USART_FIFOTHRESHOLD_1_8);

    LL_DMA_SetPeriphAddress(uart->dma.dma_device, uart->dma.rx_stream, LL_USART_DMA_GetRegAddr(uart->uart_device, LL_USART_DMA_REG_DATA_RECEIVE));
    LL_DMA_SetMemoryAddress(uart->dma.dma_device, uart->dma.rx_stream, (uint32_t)uart->dma.rx_buffer);
    LL_DMA_SetDataLength(uart->dma.dma_device, uart->dma.rx_stream, uart->dma.rx_buffer_size);
    LL_USART_ConfigAsyncMode(uart->uart_device);
    LL_USART_DisableFIFO(uart->uart_device);

    uart_dma_invalidate_buffer(uart->dma.rx_buffer, uart->dma.rx_buffer_size);

    /* start to receive data */
    _dma_receive(uart);
}

static void _dma_tx_config(struct stm32_uart* uart)
{
    LL_DMA_DeInit(uart->dma.dma_device, uart->dma.tx_stream);
    LL_DMA_DisableStream(uart->dma.dma_device, uart->dma.tx_stream);
    LL_DMA_SetPeriphRequest(uart->dma.dma_device, uart->dma.tx_stream, uart->dma.tx_request);
    LL_DMA_SetDataTransferDirection(uart->dma.dma_device, uart->dma.tx_stream, LL_DMA_DIRECTION_MEMORY_TO_PERIPH);
    LL_DMA_SetStreamPriorityLevel(uart->dma.dma_device, uart->dma.tx_stream, LL_DMA_PRIORITY_HIGH);
    LL_DMA_SetMode(uart->dma.dma_device, uart->dma.tx_stream, LL_DMA_MODE_NORMAL);
    LL_DMA_SetPeriphIncMode(uart->dma.dma_device, uart->dma.tx_stream, LL_DMA_PERIPH_NOINCREMENT);
    LL_DMA_SetMemoryIncMode(uart->dma.dma_device, uart->dma.tx_stream, LL_DMA_MEMORY_INCREMENT);
    LL_DMA_SetPeriphSize(uart->dma.dma_device, uart->dma.tx_stream, LL_DMA_PDATAALIGN_BYTE);
    LL_DMA_SetMemorySize(uart->dma.dma_device, uart->dma.tx_stream, LL_DMA_MDATAALIGN_BYTE);
    LL_DMA_DisableFifoMode(uart->dma.dma_device, uart->dma.tx_stream);
    LL_USART_SetTXFIFOThreshold(uart->uart_device, LL_USART_FIFOTHRESHOLD_1_8);
    LL_USART_ConfigAsyncMode(uart->uart_device);
    LL_USART_DisableFIFO(uart->uart_device);

    LL_DMA_SetPeriphAddress(uart->dma.dma_device, uart->dma.tx_stream, LL_USART_DMA_GetRegAddr(uart->uart_device, LL_USART_DMA_REG_DATA_TRANSMIT));

    LL_DMA_SetMemoryAddress(uart->dma.dma_device, uart->dma.tx_stream, 0x00000000U);
    LL_DMA_SetDataLength(uart->dma.dma_device, uart->dma.tx_stream, 0x00000000U);
}

static rt_err_t usart_configure(struct serial_device* serial, struct serial_configure* cfg)
{
    struct stm32_uart* uart;
    LL_USART_InitTypeDef USART_InitStructure = { 0 };

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = (struct stm32_uart*)serial->parent.user_data;

    USART_InitStructure.BaudRate = cfg->baud_rate;

    if (cfg->data_bits == DATA_BITS_8) {
        USART_InitStructure.DataWidth = LL_USART_DATAWIDTH_8B;
    } else if (cfg->data_bits == DATA_BITS_9) {
        USART_InitStructure.DataWidth = LL_USART_DATAWIDTH_9B;
    }

    if (cfg->stop_bits == STOP_BITS_1) {
        USART_InitStructure.StopBits = LL_USART_STOPBITS_1;
    } else if (cfg->stop_bits == STOP_BITS_2) {
        USART_InitStructure.StopBits = LL_USART_STOPBITS_2;
    }

    if (cfg->parity == PARITY_NONE) {
        USART_InitStructure.Parity = LL_USART_PARITY_NONE;
    } else if (cfg->parity == PARITY_ODD) {
        USART_InitStructure.Parity = LL_USART_PARITY_ODD;
    } else if (cfg->parity == PARITY_EVEN) {
        USART_InitStructure.Parity = LL_USART_PARITY_EVEN;
    }
    // TODO: Add hw flow control
    USART_InitStructure.HardwareFlowControl = LL_USART_HWCONTROL_NONE;
    USART_InitStructure.TransferDirection = LL_USART_DIRECTION_TX_RX;
    USART_InitStructure.OverSampling = LL_USART_OVERSAMPLING_16;

    /* USART need be disabled first in order to configure it */
    LL_USART_Disable(uart->uart_device);
    LL_USART_Init(uart->uart_device, &USART_InitStructure);
    LL_USART_ConfigAsyncMode(uart->uart_device);
    LL_USART_DisableIT_ERROR(uart->uart_device);
    LL_USART_DisableFIFO(uart->uart_device);
    LL_USART_Enable(uart->uart_device);

    while ((!(LL_USART_IsActiveFlag_TEACK(uart->uart_device))) || (!(LL_USART_IsActiveFlag_REACK(uart->uart_device)))) {
    }

    return RT_EOK;
}

static rt_err_t usart_control(struct serial_device* serial, int cmd, void* arg)
{
    struct stm32_uart* uart;
    rt_uint32_t ctrl_arg = (rt_uint32_t)(arg);

    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart*)serial->parent.user_data;

    switch (cmd) {
    case RT_DEVICE_CTRL_CLR_INT:
        if (ctrl_arg == RT_DEVICE_FLAG_INT_RX) {
            /* disable rx irq */
            NVIC_DisableIRQ(uart->irq);
            /* disable interrupt */
            LL_USART_DisableIT_RXNE(uart->uart_device);
        }
        break;

    case RT_DEVICE_CTRL_SET_INT:
        if (ctrl_arg == RT_DEVICE_FLAG_INT_RX) {
            /* disable rx irq */
            NVIC_EnableIRQ(uart->irq);
            /* disable interrupt */
            LL_USART_EnableIT_RXNE(uart->uart_device);
        }
        break;

    /* USART DMA config */
    case RT_DEVICE_CTRL_CONFIG:
        if (ctrl_arg == RT_DEVICE_FLAG_DMA_RX) {
            struct stm32_uart* uart = (struct stm32_uart*)serial->parent.user_data;

            if (LL_DMA_IsEnabledStream(uart->dma.dma_device, uart->dma.rx_stream)) {
                /* dma is busy */
                return RT_EBUSY;
            }

            if (uart_dma_prepare_rx_buffer(uart, serial->config.bufsz) != RT_EOK) {
                return RT_ENOMEM;
            }

            _dma_rx_config(uart, serial->config.bufsz);
        }

        if (ctrl_arg == RT_DEVICE_FLAG_DMA_TX) {
            struct stm32_uart* uart = (struct stm32_uart*)serial->parent.user_data;

            if (LL_DMA_IsEnabledStream(uart->dma.dma_device, uart->dma.tx_stream)) {
                /* dma is busy */
                return RT_EBUSY;
            }
            _dma_tx_config(uart);
        }
        break;

    /* close device */
    case RT_DEVICE_CTRL_SUSPEND:
        _close_usart(serial);
        break;

    default:
        break;
    }

    return RT_EOK;
}

static int usart_putc(struct serial_device* serial, char c)
{
    struct stm32_uart* uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart*)serial->parent.user_data;

    // /* clear tc flag before write */
    // LL_USART_ClearFlag_TC(uart->uart_device);
    /* TC flag is cleared by a write to TDR */
    uart->uart_device->TDR = c;
    /* wait write finish */
    while (LL_USART_IsActiveFlag_TC(uart->uart_device) == RESET)
        ;

    return 1;
}

static int usart_getc(struct serial_device* serial)
{
    int ch = -1;
    struct stm32_uart* uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct stm32_uart*)serial->parent.user_data;

    /* check if read data register is not empty */
    if (LL_USART_IsActiveFlag_RXNE(uart->uart_device)) {
        /* Use LL library function to read data - more reliable */
        ch = LL_USART_ReceiveData8(uart->uart_device);
    }

    return ch;
}

rt_err_t drv_usart_init(void)
{
    rt_err_t rt_err = RT_EOK;
    struct serial_configure config = SERIAL_DEFAULT_CONFIG;

    RCC_Configuration();
    GPIO_Configuration();

#ifdef USING_UART2
    /* register serial6 for USART2 (TELEM3) */
    serial6.ops = &_usart_ops;
    #ifdef SERIAL6_DEFAULT_CONFIG
    struct serial_configure serial6_config = SERIAL6_DEFAULT_CONFIG;
    serial6.config = serial6_config;
    #else
    serial6.config = config;
    #endif

    NVIC_Configuration(&uart2);
    /* register serial device */
    rt_err |= hal_serial_register(
        &serial6,
        "serial6",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX,
        &uart2);
#endif /* USING_UART2 */

#ifdef USING_UART3
    serial0.ops = &_usart_ops;
    #ifdef SERIAL0_DEFAULT_CONFIG
    struct serial_configure serial0_config = SERIAL0_DEFAULT_CONFIG;
    serial0.config = serial0_config;
    #else
    serial0.config = config;
    #endif

    NVIC_Configuration(&uart3);
    /* register serial device */
    rt_err |= hal_serial_register(
        &serial0,
        "serial0",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX,
        &uart3);
#endif /* USING_UART3 */

#ifdef USING_UART1
    serial2.ops = &_usart_ops;
    #ifdef SERIAL2_DEFAULT_CONFIG
    struct serial_configure serial2_config = SERIAL2_DEFAULT_CONFIG;
    serial2.config = serial2_config;
    #else
    serial2.config = config;
    #endif

    NVIC_Configuration(&uart1);
    /* register serial device */
    rt_err |= hal_serial_register(
        &serial2,
        "serial2",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX,
        &uart1);
#endif /* USING_UART1 */

#ifdef USING_UART5
    /* register serial4 for UART5 (TELEM2) */
    serial4.ops = &_usart_ops;
    #ifdef SERIAL4_DEFAULT_CONFIG
    struct serial_configure serial4_config = SERIAL4_DEFAULT_CONFIG;
    serial4.config = serial4_config;
    #else
    serial4.config = config;
    #endif

    NVIC_Configuration(&uart5);
    /* register serial device */
    rt_err |= hal_serial_register(
        &serial4,
        "serial4",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX,
        &uart5);
#endif /* USING_UART5 */

#ifdef USING_UART8
    serial3.ops = &_usart_ops;
    #ifdef SERIAL3_DEFAULT_CONFIG
    struct serial_configure serial3_config = SERIAL3_DEFAULT_CONFIG;
    serial3.config = serial3_config;
    #else
    serial3.config = config;
    #endif

    NVIC_Configuration(&uart8);
    /* register serial device */
    rt_err |= hal_serial_register(
        &serial3,
        "serial3",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX,
        &uart8);
#endif /* USING_UART8 */

/* USING_UART7: register serial1 for UART7 (TELEM1) */
#ifdef USING_UART7
    serial1.ops = &_usart_ops;
    #ifdef SERIAL1_DEFAULT_CONFIG
    struct serial_configure serial1_config = SERIAL1_DEFAULT_CONFIG;
    serial1.config = serial1_config;
    #else
    serial1.config = config;
    #endif
    NVIC_Configuration(&uart7);
    /* register serial device */
    rt_err |= hal_serial_register(
        &serial1,
        "serial1",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX,
        &uart7);
#endif /* USING_UART7 */

#ifdef USING_UART6
    serial5.ops = &_usart_ops;
    #ifdef SERIAL5_DEFAULT_CONFIG
    struct serial_configure serial5_config = SERIAL5_DEFAULT_CONFIG;
    serial5.config = serial5_config;
    #else
    serial5.config = config;
    #endif

    NVIC_Configuration(&uart6);

    /* register serial device */
    rt_err |= hal_serial_register(
        &serial5,
        "serial5",
        RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_RX | RT_DEVICE_FLAG_DMA_TX,
        &uart6);
#endif /* USING_UART6 */

    return rt_err;
}
