==> Firmament-Autopilot/FMT-Firmware/target/sieon/hc32f4/drivers/drv_usart.c <==
#include <firmament.h>
#include "drv_usart.h"
#include "hal/serial/serial.h"
#define USING_UART5
#define USING_UART2
#define SERIAL3_DEFAULT_CONFIG                    \
    {                                             \
        BAUD_RATE_115200,    /* 115200 bits/s */  \
            DATA_BITS_8,     /* 8 databits */     \
            STOP_BITS_1,     /* 1 stopbit */      \
            PARITY_NONE,     /* No parity  */     \
            BIT_ORDER_LSB,   /* LSB first sent */ \
            NRZ_NORMAL,      /* Normal mode */    \
            SERIAL_RB_BUFSZ, /* Buffer size */    \
            0                                     \
    }

static void dma_tx_config(struct hc32_uart* uart)
{
    int32_t i32Ret;
    stc_dma_init_t stcDmaInit;
    // stc_dma_llp_init_t stcDmaLlpInit;
    stc_irq_signin_config_t stcIrqSignConfig;
    // static stc_dma_llp_descriptor_t stcLlpDesc;

    /* USART_TX_DMA */
    (void)DMA_StructInit(&stcDmaInit);
    stcDmaInit.u32IntEn = DMA_INT_ENABLE;
    stcDmaInit.u32BlockSize = 1;
    stcDmaInit.u32TransCount = 500;
    stcDmaInit.u32DataWidth = DMA_DATAWIDTH_8BIT;
    stcDmaInit.u32DestAddr = (uint32_t)(&uart->uart_periph->TDR);
    stcDmaInit.u32SrcAddr = (uint32_t)m_au8RxBuf;
    stcDmaInit.u32SrcAddrInc = DMA_SRC_ADDR_INC;
    stcDmaInit.u32DestAddrInc = DMA_DEST_ADDR_FIX;
    i32Ret = DMA_Init(uart->dma.dma_periph, uart->dma.dma_tx_ch, &stcDmaInit);
    if (LL_OK == i32Ret) {
        stcIrqSignConfig.enIntSrc = uart->dma.dma_tx_tc_int_src;
        stcIrqSignConfig.enIRQn = uart->dma.dma_tx_tc_irq;
        stcIrqSignConfig.pfnCallback = &USART2_TX_DMA_TC_IrqCallback;
        (void)INTC_IrqSignIn(&stcIrqSignConfig);
        NVIC_ClearPendingIRQ(stcIrqSignConfig.enIRQn);
        NVIC_SetPriority(stcIrqSignConfig.enIRQn, DDL_IRQ_PRIO_DEFAULT);
        NVIC_EnableIRQ(stcIrqSignConfig.enIRQn);

        AOS_SetTriggerEventSrc(uart->dma.dma_tx_trig_sel, uart->dma.dma_tx_trig_evt_src);

        DMA_Cmd(uart->dma.dma_periph, ENABLE);
        DMA_TransCompleteIntCmd(uart->dma.dma_periph, uart->dma.dma_tx_tc_int, ENABLE);
    }
}

static void dma_rx_config(struct hc32_uart* uart, rt_uint8_t* buf, rt_size_t size)
{
    // int32_t i32Ret;
    // stc_dma_init_t stcDmaInit;
    // stc_dma_llp_init_t stcDmaLlpInit;
    // stc_irq_signin_config_t stcIrqSignConfig;
    // static stc_dma_llp_descriptor_t stcLlpDesc;

    // /* USART_RX_DMA */
    // (void)DMA_StructInit(&stcDmaInit);
    // stcDmaInit.u32IntEn = DMA_INT_ENABLE;
    // stcDmaInit.u32BlockSize = 1UL;
    // stcDmaInit.u32TransCount = size;
    // stcDmaInit.u32DataWidth = DMA_DATAWIDTH_8BIT;
    // stcDmaInit.u32DestAddr = (uint32_t)buf;
    // stcDmaInit.u32SrcAddr = (uint32_t)(&uart->uart_periph->RDR);
    // stcDmaInit.u32SrcAddrInc = DMA_SRC_ADDR_FIX;
    // stcDmaInit.u32DestAddrInc = DMA_DEST_ADDR_INC;
    // i32Ret = DMA_Init(uart->dma.dma_periph, uart->dma.dma_rx_ch, &stcDmaInit);
    // if (LL_OK == i32Ret) {
    //     (void)DMA_LlpStructInit(&stcDmaLlpInit);
    //     stcDmaLlpInit.u32State = DMA_LLP_ENABLE;
    //     stcDmaLlpInit.u32Mode = DMA_LLP_WAIT;
    //     stcDmaLlpInit.u32Addr = (uint32_t)&stcLlpDesc;
    //     (void)DMA_LlpInit(uart->dma.dma_periph, uart->dma.dma_rx_ch, &stcDmaLlpInit);

    //     stcLlpDesc.SARx = stcDmaInit.u32SrcAddr;
    //     stcLlpDesc.DARx = stcDmaInit.u32DestAddr;
    //     stcLlpDesc.DTCTLx = (stcDmaInit.u32TransCount << DMA_DTCTL_CNT_POS) | (stcDmaInit.u32BlockSize << DMA_DTCTL_BLKSIZE_POS);
    //     stcLlpDesc.LLPx = (uint32_t)&stcLlpDesc;
    //     stcLlpDesc.CHCTLx = stcDmaInit.u32SrcAddrInc | stcDmaInit.u32DestAddrInc | stcDmaInit.u32DataWidth | stcDmaInit.u32IntEn | stcDmaLlpInit.u32State | stcDmaLlpInit.u32Mode;

    //     // DMA_ReconfigLlpCmd(uart->dma.dma_periph, uart->dma.dma_rx_ch, ENABLE);
    //     // DMA_ReconfigCmd(uart->dma.dma_periph, ENABLE);
    //     // AOS_SetTriggerEventSrc(uart->dma.dma_rx_reconfig_trig_sel, uart->dma.dma_rx_reconfig_trig_evt_src);

    //     stcIrqSignConfig.enIntSrc = uart->dma.dma_rx_tc_int_src;
    //     stcIrqSignConfig.enIRQn = INT004_IRQn;
    //     stcIrqSignConfig.pfnCallback = &USART2_RX_DMA_TC_IrqCallback;
    //     (void)INTC_IrqSignIn(&stcIrqSignConfig);
    //     NVIC_ClearPendingIRQ(stcIrqSignConfig.enIRQn);
    //     NVIC_SetPriority(stcIrqSignConfig.enIRQn, DDL_IRQ_PRIO_DEFAULT);
    //     NVIC_EnableIRQ(stcIrqSignConfig.enIRQn);

    //     AOS_SetTriggerEventSrc(uart->dma.dma_rx_trig_sel, uart->dma.dma_rx_trig_evt_src);

    //     DMA_Cmd(uart->dma.dma_periph, ENABLE);
    //     DMA_TransCompleteIntCmd(uart->dma.dma_periph, uart->dma.dma_rx_tc_int, ENABLE);
    //     (void)DMA_ChCmd(uart->dma.dma_periph, uart->dma.dma_rx_ch, ENABLE);
    // }
}

static rt_err_t usart_configure(struct serial_device* serial, struct serial_configure* cfg)
{
    struct hc32_uart* uart;
    stc_usart_uart_init_t stcUartInit;

    RT_ASSERT(serial != RT_NULL);
    RT_ASSERT(cfg != RT_NULL);

    uart = (struct hc32_uart*)serial->parent.user_data;

    // LL_PERIPH_WE(LL_PERIPH_ALL);

    USART_DeInit(uart->uart_periph);
    (void)USART_UART_StructInit(&stcUartInit);

    stcUartInit.u32Baudrate = cfg->baud_rate;

    if (cfg->data_bits == DATA_BITS_8) {
        stcUartInit.u32DataWidth = USART_DATA_WIDTH_8BIT;
    } else if (cfg->data_bits == DATA_BITS_9) {
        stcUartInit.u32DataWidth = USART_DATA_WIDTH_9BIT;
    }

    if (cfg->stop_bits == STOP_BITS_1) {
        stcUartInit.u32StopBit = USART_STOPBIT_1BIT;
    } else if (cfg->stop_bits == STOP_BITS_2) {
        stcUartInit.u32StopBit = USART_STOPBIT_2BIT;
    }

    if (cfg->parity == PARITY_NONE) {
        stcUartInit.u32Parity = USART_PARITY_NONE;
    } else if (cfg->parity == PARITY_ODD) {
        stcUartInit.u32Parity = USART_PARITY_ODD;
    } else if (cfg->parity == PARITY_EVEN) {
        stcUartInit.u32Parity = USART_PARITY_EVEN;
    }

    stcUartInit.u32HWFlowControl = USART_HW_FLOWCTRL_NONE;
    stcUartInit.u32OverSampleBit = USART_OVER_SAMPLE_16BIT;
    stcUartInit.u32FirstBit = USART_FIRST_BIT_LSB;
    stcUartInit.u32StartBitPolarity = USART_START_BIT_FALLING;
    USART_UART_Init(uart->uart_periph, &stcUartInit, NULL);

    /* Enable USART_TX | USART_RX function */
    USART_FuncCmd(uart->uart_periph, (USART_TX | USART_RX | USART_INT_RX), ENABLE);

    // LL_PERIPH_WP(LL_PERIPH_ALL);

    return RT_EOK;
}

static rt_err_t usart_control(struct serial_device* serial, int cmd, void* arg)
{
    struct hc32_uart* uart;
    rt_uint32_t ctrl_arg = (rt_uint32_t)(arg);

    RT_ASSERT(serial != RT_NULL);
    uart = (struct hc32_uart*)serial->parent.user_data;
    (void)uart;

    switch (cmd) {
    case RT_DEVICE_CTRL_CLR_INT:
        if (ctrl_arg == RT_DEVICE_FLAG_INT_RX) {
        }
        break;

    case RT_DEVICE_CTRL_SET_INT:
        if (ctrl_arg == RT_DEVICE_FLAG_INT_RX) {
        }
        break;

        /* USART DMA config */
    case RT_DEVICE_CTRL_CONFIG:
        if (ctrl_arg == RT_DEVICE_FLAG_DMA_TX) {
            struct hc32_uart* uart = (struct hc32_uart*)serial->parent.user_data;

            // if (LL_DMA_IsEnabledStream(uart->dma.dma_device, uart->dma.tx_stream)) {
            //     /* dma is busy */
            //     return RT_EBUSY;
            // }

            /* the USART_TX cmd will be enabled when dma configured */
            USART_FuncCmd(uart2.uart_periph, (USART_TX | USART_INT_TX_CPLT), DISABLE);

            dma_tx_config(uart);
        }
        break;

    case RT_DEVICE_CTRL_SUSPEND:
        break;

    default:
        break;
    }

    return RT_EOK;
}

static int usart_putc(struct serial_device* serial, char ch)
{
    struct hc32_uart* uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct hc32_uart*)serial->parent.user_data;

    /* Wait Tx data register empty */
    while (RESET == USART_GetStatus(uart->uart_periph, USART_FLAG_TX_EMPTY)) {
    }

    USART_WriteData(uart->uart_periph, ch);

    return RT_EOK;
}

static int usart_getc(struct serial_device* serial)
{
    int ch = -1;
    struct hc32_uart* uart;

    RT_ASSERT(serial != RT_NULL);
    uart = (struct hc32_uart*)serial->parent.user_data;

    if (SET == USART_GetStatus(uart->uart_periph, USART_FLAG_RX_FULL))
        ch = USART_ReadData(uart->uart_periph);

    return ch;
}

rt_err_t drv_usart_init(void)
{
    rt_err_t rt_err = RT_EOK;
    struct serial_configure config = SERIAL_DEFAULT_CONFIG;

    uart_peripheral_init();

#ifdef USING_UART5
    serial0.ops = &__usart_ops;
    #ifdef SERIAL0_DEFAULT_CONFIG
    struct serial_configure serial0_config = SERIAL0_DEFAULT_CONFIG;
    serial0.config = serial0_config;
    #else
    serial0.config = config;
    #endif

    /* register serial device */
    rt_err |= hal_serial_register(&serial0,
                                  "serial0",
                                  RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX,
                                  &uart5);
#endif /* USING_UART5 */

#ifdef USING_UART2
    serial2.ops = &__usart_ops;
    #ifdef SERIAL2_DEFAULT_CONFIG
    struct serial_configure serial2_config = SERIAL2_DEFAULT_CONFIG;
    serial2.config = serial2_config;
    #else
    serial2.config = config;
    #endif

    /* register serial device */
    rt_err |= hal_serial_register(&serial2,
                                  "serial2",
                                  RT_DEVICE_FLAG_RDWR | RT_DEVICE_FLAG_STANDALONE | RT_DEVICE_FLAG_INT_RX | RT_DEVICE_FLAG_DMA_TX,
                                  &uart2);
#endif /* USING_UART2 */

    return rt_err;
}
